--- a/config.json
+++ b/config.json
@@ -335,16 +335,16 @@
         "type": "draft",
         "path": "/draft/115",
         "pinned": true,
-        "recentness": 1765219713453
+        "recentness": 1765665481711
       },
       {
-        "id": "111",
+        "id": "116",
         "type": "draft",
-        "path": "/draft/111",
-        "pinned": false,
-        "recentness": 1765151573686
+        "path": "/draft/116",
+        "pinned": true,
+        "recentness": 1765665503814
       }
     ],
-    "path": "/draft/115"
+    "path": "/draft/116"
   }
 }
