--- a/config.json
+++ b/config.json
@@ -335,16 +335,23 @@
         "type": "draft",
         "path": "/draft/115",
         "pinned": true,
-        "recentness": 1765665481711
+        "recentness": 1765935238999
       },
       {
         "id": "116",
         "type": "draft",
         "path": "/draft/116",
         "pinned": true,
-        "recentness": 1765665503814
+        "recentness": 1765935233814
+      },
+      {
+        "id": "117",
+        "type": "draft",
+        "path": "/draft/117",
+        "pinned": true,
+        "recentness": 1765935238476
       }
     ],
-    "path": "/draft/116"
+    "path": "/draft/115"
   }
 }
